NAS-137822: First line of new Users page buggy on mobile

--- a/src/app/modules/ix-table/components/ix-table-body/ix-table-body.component.scss
+++ b/src/app/modules/ix-table/components/ix-table-body/ix-table-body.component.scss
@@ -13,6 +13,11 @@
   height: 48px;
   position: relative;
 
+  @media (max-width: $breakpoint-sm) {
+    height: inherit;
+    min-height: 48px;
+  }
+
   &:focus {
     box-shadow: 0 0 0 1.5px var(--focus-bg) inset;
     outline-width: 0;
